--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "editor": "parcel public/editor.html"
+    "editor": "parcel public/editor.html",
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,11 @@
   },
   "homepage": "https://github.com/Radcho/arrow_game#readme",
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "sass": "^1.23.7"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "purecss": "^1.0.1"
   }
 }
