--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arrow_game",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project for the class Webove Programovanie.",
   "main": "index.js",
   "scripts": {
     "build:sass": "node-sass app/styles/main.scss -o dist/styles",
@@ -27,13 +27,13 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "node-sass": "^4.13.0",
-    "nodemon": "^2.0.1",
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "purecss": "^1.0.1"
+    "purecss": "^1.0.1",
+    "nodemon": "^2.0.1"
   },
   "browserslist": "> 5%, not IE 11"
 }
